<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">,</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_equal">=</string>
    <string name="_c">C</string>
    <string name="division">/</string>
    <string name="x">x</string>
    <string name="erase"><![CDATA[<]]></string>
    <string name="contDesc" />
    <string name="btn_theme">theme</string>
    <string name="btn_settings">settings</string>
    <string name="name_ligth_theme">Светлая тема</string>
    <string name="name_dark_theme">Темная тема</string>
</resources>